--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -110,7 +110,7 @@ li div {
 }
 
 li div span {
-  color: #bc2e2e;
+  color: #ea0ce2;
   font-weight: 500;
 }
 
@@ -122,7 +122,7 @@ li div::before {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #2c7096;
+  background-color: #102dec;
   transform: scaleX(0);
   transform-origin: top left;
   transition: transform 0.2s ease;
@@ -158,7 +158,7 @@ li.active-link div::before {
 }
 
 .facing span {
-  color: #bc2e2e;
+  color: #ade825;
   font-weight: 500;
 }
 
