--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -11,11 +11,11 @@
 
 /* General Styles */
 html {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 body {
-  background-color: #f9f9f9;
+  background-color: #af2727;
   height: 100vh;
   margin: 0;
   padding: 0 30px;
